--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
 
+        <service android:name=".services.TrackingService"
+            android:foregroundServiceType="location"/>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value=""/>
@@ -36,7 +39,7 @@
             <meta-data
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/google_maps_key"/>
-        </activity>
+
     </application>
 
 </manifest>
